[package]
name = "voltage-encryptor"
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.95"
cxx-qt = { git = "https://github.com/KDAB/cxx-qt" }
cxx-qt-lib = { git = "https://github.com/KDAB/cxx-qt" }

[build-dependencies]
cxx-qt-build = { git = "https://github.com/KDAB/cxx-qt" }
