[package]
name = "voltage-encryptor"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
cxx = "1.0.95"
cxx-qt = { git = "https://github.com/KDAB/cxx-qt" }
cxx-qt-lib = { git = "https://github.com/KDAB/cxx-qt" }
tokio = { version = "1.29.1", features = ["full"] }

[build-dependencies]
cxx-qt-build = { git = "https://github.com/KDAB/cxx-qt" }
